# OpSrv

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MessageDecoder.cpp  MessageDecoder.h  NetworkAddressSourceSupplierClient.cpp  NetworkAddressSourceSupplierClient.h  OpSrv.cpp  OpSrv.h  Protocol.cpp  Protocol.h  ServerLogic.cpp  ServerLogic.h  SocketListen.cpp  SocketListen.h  SocketMessage.cpp  SocketMessage.h  WSAInitializer.cpp  WSAInitializer.h
doc/: protocol.txt
